Potential fix to footer issues on iOS devices, passed browserstack check

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -8,9 +8,8 @@
 }
 
 .footerSocialIcons {
-	padding: 0 15px;
-	position: absolute;
-	right: 0;
+	position: relative;
+	margin-left: auto;
 	display: flex;
 	align-items: flex-end;
 }
